Basic Structure and first components

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,27 @@
 <!doctype html>
+<!--[if lt IE 7 ]> <html lang="en" class="no-js ie6"> <![endif]-->
+<!--[if IE 7 ]>    <html lang="en" class="no-js ie7"> <![endif]-->
+<!--[if IE 8 ]>    <html lang="en" class="no-js ie8"> <![endif]-->
+<!--[if IE 9 ]>    <html lang="en" class="no-js ie9"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="no-js"><!--<![endif]-->
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Csdashv2</title>
+  <title>Pending Approval and Duplicates</title>
   <base href="/">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"> -->
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-touch-fullscreen" content="yes">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- <link rel="stylesheet" type="text/css" href="<?php echo base_url(); ?>flakes/css/all.css<?php echo '?v='.CSDASH_VERSION;  ?>"> -->
+	<!-- <link rel="stylesheet" type="text/css" href="<?php echo base_url(); ?>flakes/DataTables/datatables.css<?php echo '?v='.CSDASH_VERSION;  ?>"> -->
+	<!-- <link rel="stylesheet" type="text/css" href="<?php echo base_url(); ?>flakes/css/custom.css<?php echo '?v='.CSDASH_VERSION;  ?>"> -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
 </head>
 <body>
+
   <app-root></app-root>
+  
 </body>
 </html>
