Refactor of main modules for lazy loading properly
- Fix the app module and pending approval module
- refactor of datatable component
- add shared module to project
- fix shipment service

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   <!-- <link rel="stylesheet" type="text/css" href="<?php echo base_url(); ?>flakes/css/all.css<?php echo '?v='.CSDASH_VERSION;  ?>"> -->
 	<!-- <link rel="stylesheet" type="text/css" href="<?php echo base_url(); ?>flakes/DataTables/datatables.css<?php echo '?v='.CSDASH_VERSION;  ?>"> -->
 	<!-- <link rel="stylesheet" type="text/css" href="<?php echo base_url(); ?>flakes/css/custom.css<?php echo '?v='.CSDASH_VERSION;  ?>"> -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" /> -->
 </head>
 <body>
 
