--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <!-- <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"> -->
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-touch-fullscreen" content="yes">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.png">
   <!-- <link rel="stylesheet" type="text/css" href="<?php echo base_url(); ?>flakes/css/all.css<?php echo '?v='.CSDASH_VERSION;  ?>"> -->
 	<!-- <link rel="stylesheet" type="text/css" href="<?php echo base_url(); ?>flakes/DataTables/datatables.css<?php echo '?v='.CSDASH_VERSION;  ?>"> -->
 	<!-- <link rel="stylesheet" type="text/css" href="<?php echo base_url(); ?>flakes/css/custom.css<?php echo '?v='.CSDASH_VERSION;  ?>"> -->
