--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,12 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-touch-fullscreen" content="yes">
   <link rel="icon" type="image/x-icon" href="favicon.png">
+
+  <!-- Material Design for Bootstrap CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css" integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
+  <!-- <link rel="stylesheet" href="node_modules/bootstrap-material-design/dist/css/bootstrap-material-design.min.css"> -->
+  
   <!-- <link rel="stylesheet" type="text/css" href="<?php echo base_url(); ?>flakes/css/all.css<?php echo '?v='.CSDASH_VERSION;  ?>"> -->
 	<!-- <link rel="stylesheet" type="text/css" href="<?php echo base_url(); ?>flakes/DataTables/datatables.css<?php echo '?v='.CSDASH_VERSION;  ?>"> -->
 	<!-- <link rel="stylesheet" type="text/css" href="<?php echo base_url(); ?>flakes/css/custom.css<?php echo '?v='.CSDASH_VERSION;  ?>"> -->
